Change title and meta tags.

--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="">
-<meta name="author" content="">
-<title>ALPHA</title>
+<meta name="description" content="Wedding website for Nathan Paulsen and Emily Ullerich.">
+<meta name="author" content="Curtis Ullerich">
+<title>Nathan &amp; Emily</title>
 
 <!-- Bootstrap core CSS -->
 <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -35,7 +34,7 @@
     <div class="container">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-        <a class="navbar-brand" href="#home">ALPHA</a> </div>
+        <a class="navbar-brand" href="#home">Nathan &amp; Emily</a> </div>
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
           <li><a href="#home" class="smoothScroll">Home</a></li>
@@ -54,9 +53,8 @@
 <!-- ==== HEADERWRAP ==== -->
 <div id="headerwrap" name="home">
   <header class="clearfix"> <i class="fa fa-language icon"></i>
-    <h1>Creative & High Quality</h1>
-    <p>Lorem ipsum dolor sit amet, cu menandri molestiae voluptaria eam,<br>
-      invidunt reprehendunt nec ei. Sonet regione consulatu vel id.</p>
+    <h1>Nathan &amp; Emily</h1>
+    <p>June 13th, 2015</p>
     <a href="#portfolio" class="smoothScroll btn btn-lg">See Our Works</a> </header>
 </div>
 <!-- /headerwrap --> 
