Change element IDs to match new content.

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
           <li><a href="#home" class="smoothScroll">Home</a></li>
-          <li> <a href="#about" class="smoothScroll"> About</a></li>
-          <li> <a href="#services" class="smoothScroll"> Services</a></li>
-          <li> <a href="#portfolio" class="smoothScroll"> Portfolio</a></li>
+          <li> <a href="#location" class="smoothScroll"> About</a></li>
+          <li> <a href="#schedule" class="smoothScroll"> Services</a></li>
+          <li> <a href="#registry" class="smoothScroll"> Portfolio</a></li>
           <li> <a href="#team" class="smoothScroll"> Team</a></li>
           <li> <a href="#contact" class="smoothScroll"> Contact</a></li>
         </ul>
@@ -60,7 +60,7 @@
 <!-- /headerwrap --> 
 
 <!-- ==== ABOUT ==== -->
-<div id="about" name="about">
+<div id="location" name="location">
   <div class="container">
     <div class="row white">
       <h2 class="centered">ABOUT US</h2>
@@ -79,7 +79,7 @@
 <!-- container --> 
 
 <!-- ==== SERVICES ==== -->
-<div id="services" name="services">
+<div id="schedule" name="schedule">
   <div class="container">
     <div class="row">
       <h2 class="centered">OUR SERVICES</h2>
@@ -106,7 +106,7 @@
 <!-- container --> 
 
 <!-- ==== PORTFOLIO ==== -->
-<div id="portfolio" name="portfolio">
+<div id="registry" name="registry">
   <div class="container">
     <div class="row">
       <h2 class="centered">OUR PORTFOLIO</h2>
