Change section names.

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
           <li><a href="#home" class="smoothScroll">Home</a></li>
-          <li> <a href="#location" class="smoothScroll"> About</a></li>
-          <li> <a href="#schedule" class="smoothScroll"> Services</a></li>
-          <li> <a href="#registry" class="smoothScroll"> Portfolio</a></li>
+          <li> <a href="#location" class="smoothScroll"> Location</a></li>
+          <li> <a href="#schedule" class="smoothScroll"> Schedule</a></li>
+          <li> <a href="#registry" class="smoothScroll"> Registry</a></li>
         </ul>
       </div>
       <!--/.nav-collapse --> 
@@ -57,11 +57,11 @@
 </div>
 <!-- /headerwrap --> 
 
-<!-- ==== ABOUT ==== -->
+<!-- ==== LOCATION ==== -->
 <div id="location" name="location">
   <div class="container">
     <div class="row white">
-      <h2 class="centered">ABOUT US</h2>
+      <h2 class="centered">LOCATION</h2>
       <hr>
       <div class="col-md-6"> <img class="img-responsive" src="assets/img/about/about1.jpg" align=""> </div>
       <div class="col-md-6">
@@ -76,11 +76,11 @@
 </div>
 <!-- container --> 
 
-<!-- ==== SERVICES ==== -->
+<!-- ==== SCHEDULE ==== -->
 <div id="schedule" name="schedule">
   <div class="container">
     <div class="row">
-      <h2 class="centered">OUR SERVICES</h2>
+      <h2 class="centered">SCHEDULE</h2>
       <hr>
       <div class="col-lg-8 col-lg-offset-2">
         <p class="large">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
@@ -103,11 +103,11 @@
 </div>
 <!-- container --> 
 
-<!-- ==== PORTFOLIO ==== -->
+<!-- ==== REGISTRY ==== -->
 <div id="registry" name="registry">
   <div class="container">
     <div class="row">
-      <h2 class="centered">OUR PORTFOLIO</h2>
+      <h2 class="centered">REGISTRY</h2>
       <hr>
       <div class="col-lg-8 col-lg-offset-2 centered">
         <p class="large">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
