Changed text content in schedule.

--- a/index.html
+++ b/index.html
@@ -79,19 +79,19 @@
       <h2 class="centered">SCHEDULE</h2>
       <hr>
       <div class="col-lg-8 col-lg-offset-2">
-        <p class="large">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
+        <p class="large">Ceremony begins at 4 pm, with dinner and dancing afterward, all at the Cottonwood Barn.</p>
       </div>
       <div class="col-lg-4 callout"> <i class="fa fa-desktop fa-3x"></i>
-        <h3>Responsive Design</h3>
-        <p>Erat imperdiet dissentias ea usu, alia aliquid corrumpit ea qui. Eu vim oratio conclusionemque, vel at errem nominavi delicatissimi.</p>
+        <h3>Ceremony</h3>
+        <p>To be held under the tree, weather permitting.</p>
       </div>
       <div class="col-lg-4 callout"> <i class="fa fa-gears fa-3x"></i>
-        <h3>Web Development</h3>
-        <p>Erat imperdiet dissentias ea usu, alia aliquid corrumpit ea qui. Eu vim oratio conclusionemque, vel at errem nominavi delicatissimi.</p>
+        <h3>Dinner</h3>
+        <p>We have food for you.</p>
       </div>
       <div class="col-lg-4 callout"> <i class="fa fa-dot-circle-o fa-3x"></i>
-        <h3>Social Marketing</h3>
-        <p>Erat imperdiet dissentias ea usu, alia aliquid corrumpit ea qui. Eu vim oratio conclusionemque, vel at errem nominavi delicatissimi.</p>
+        <h3>Dancing</h3>
+        <p>Let's party.</p>
       </div>
     </div>
     <!-- row --> 
