Change text content of registry.

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       <h2 class="centered">REGISTRY</h2>
       <hr>
       <div class="col-lg-8 col-lg-offset-2 centered">
-        <p class="large">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
+        <p class="large">For the gifts.</p>
       </div>
     </div>
     <!-- /row -->
