Change fa icons.

--- a/index.html
+++ b/index.html
@@ -81,15 +81,15 @@
       <div class="col-lg-8 col-lg-offset-2">
         <p class="large">Ceremony begins at 4 pm, with dinner and dancing afterward, all at the Cottonwood Barn.</p>
       </div>
-      <div class="col-lg-4 callout"> <i class="fa fa-desktop fa-3x"></i>
+      <div class="col-lg-4 callout"> <i class="fa fa-heart-o fa-3x"></i>
         <h3>Ceremony</h3>
         <p>To be held under the tree, weather permitting.</p>
       </div>
-      <div class="col-lg-4 callout"> <i class="fa fa-gears fa-3x"></i>
+      <div class="col-lg-4 callout"> <i class="fa fa-cutlery fa-3x"></i>
         <h3>Dinner</h3>
         <p>We have food for you.</p>
       </div>
-      <div class="col-lg-4 callout"> <i class="fa fa-dot-circle-o fa-3x"></i>
+      <div class="col-lg-4 callout"> <i class="fa fa-music fa-3x"></i>
         <h3>Dancing</h3>
         <p>Let's party.</p>
       </div>
