--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <!-- Custom CSS -->
 <link href="assets/css/main.css" rel="stylesheet">
+<link href="assets/css/custom-fonts.css" rel="stylesheet">
 <link href="assets/css/font-awesome.min.css" rel="stylesheet">
 <link href="assets/css/animate-custom.css" rel="stylesheet">
 <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic' rel='stylesheet' type='text/css'>
