Swap location image for cottonwood.

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <div class="row white">
       <h2 class="centered">LOCATION</h2>
       <hr>
-      <div class="col-md-6"> <img class="img-responsive" src="assets/img/about/about1.jpg" align=""> </div>
+      <div class="col-md-6"> <img class="img-responsive" src="assets/img/cottonwood.jpg" align=""> </div>
       <div class="col-md-6">
         <h3>Cottonwood Barn</h3>
       </div>
