Swap icon for sunflower and make title visible.

--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
 
 <!-- ==== HEADERWRAP ==== -->
 <div id="headerwrap" name="home">
-  <header class="clearfix"> <i class="fa fa-language icon"></i>
+  <header class="clearfix"> 
+    <img class="center-block img-responsive" id="sunflower" src="assets/img/sunflower.png">
     <h1>Nathan &amp; Emily</h1>
     <p>June 13th, 2015</p>
 </div>
