Made map relative layout.

--- a/index.html
+++ b/index.html
@@ -64,10 +64,20 @@
     <div class="row white">
       <h2 class="centered">LOCATION</h2>
       <hr>
-      <div class="col-md-6"> <img class="img-responsive" src="assets/img/cottonwood.jpg" align=""> </div>
+      <div class="col-md-6">
+        <img class="img-responsive" src="assets/img/cottonwood.jpg" align="">
+      </div>
       <div class="col-md-6">
         <h3>Cottonwood Barn</h3>
-      </div>
+        <h4>206 E. Odense St, Kimballton, Iowa</h4>
+        <div id="map-outer">
+          <div id="map-inner">
+            <a class="img-responsive" align="" href="https://www.google.com/maps/place/206+E.+Odense+St,+Kimballton,+Iowa/">
+              <img id="map-img" src="http://maps.googleapis.com/maps/api/staticmap?center=206+E.+Odense+St,+Kimballton,+Iowa&zoom=16&scale=false&size=600x250&maptype=roadmap&format=png&visual_refresh=true&markers=size:mid%7Ccolor:red%7Clabel:A%7C206+E.+Odense+St,+Kimballton,+Iowa" alt="Google Map of Cottonwood Barn, 206 E. Odense St, Kimballton, Iowa">
+            </a>
+          </div>
+        </div>
+      </div> 
     </div>
     <!-- row --> 
   </div>
