Add photos section.

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
           <li> <a href="#location" class="smoothScroll"> Location</a></li>
           <li> <a href="#schedule" class="smoothScroll"> Schedule</a></li>
           <li> <a href="#registry" class="smoothScroll"> Registry</a></li>
+          <li> <a href="#photos" class="smoothScroll"> Photos</a></li>
         </ul>
       </div>
       <!--/.nav-collapse --> 
@@ -119,6 +120,24 @@
       <hr>
       <div class="col-lg-8 col-lg-offset-2 centered">
         <p class="large">For the gifts.</p>
+      </div>
+    </div>
+    <!-- /row --> 
+  </div>
+</div>
+<!-- /container --> 
+
+<!-- ==== PHOTOS ==== -->
+<div id="photos" name="photos">
+  <div class="container">
+    <div class="row">
+      <h2 class="centered">PHOTOS</h2>
+      <hr>
+      <div class="col-md-6">
+        <h2 class="centered">#paulsen2015</h2>
+      </div>
+      <div class="col-md-6">
+        <p class="large">On the day of the wedding, feel free to hashtag any photos you share on Facebook, Instagram, Twitter, etc with #paulsen2015. You can also share photos directly with Nathan and Emily using the app Wed Pics, with ID still-need-an-id.</p>
       </div>
     </div>
     <!-- /row --> 
