--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <!-- ==== HEADERWRAP ==== -->
 <div id="headerwrap" name="home">
   <header class="clearfix"> 
-    <img class="center-block img-responsive" id="sunflower" src="assets/img/sunflower.png">
+    <img class="center-block img-responsive" id="sunflower" src="assets/img/sunflower-small.png">
     <h1>Nathan &amp; Emily</h1>
     <p>June 13th, 2015</p>
 </div>
