Add links to Wed Pics

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <h2 class="centered">#paulsen2015</h2>
       </div>
       <div class="col-md-6">
-        <p class="large">On the day of the wedding, feel free to hashtag any photos you share on Facebook, Instagram, Twitter, etc with #paulsen2015. You can also share photos directly with Nathan and Emily using the app Wed Pics, with ID still-need-an-id.</p>
+        <p class="large">On the day of the wedding, feel free to hashtag any photos you share on Facebook, Instagram, Twitter, etc with #paulsen2015. You can also share photos directly with Nathan and Emily using the app Wed Pics (<a href="https://play.google.com/store/apps/details?id=com.dejami.WedPics">Android</a>, <a href="https://itunes.apple.com/us/app/wedpics-wedding-photo-app/id549402355">iOS</a>) , with ID still-need-an-id.</p>
       </div>
     </div>
     <!-- /row --> 
