--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <li><a href="#home" class="smoothScroll">Home</a></li>
           <li> <a href="#location" class="smoothScroll"> Location</a></li>
           <li> <a href="#schedule" class="smoothScroll"> Schedule</a></li>
-          <li> <a href="#registry" class="smoothScroll"> Registry</a></li>
+          <li> <a href="#gifts" class="smoothScroll"> Gifts</a></li>
           <li> <a href="#photos" class="smoothScroll"> Photos</a></li>
         </ul>
       </div>
@@ -57,6 +57,7 @@
     <img class="center-block img-responsive" id="sunflower" src="assets/img/sunflower.png">
     <h1>Nathan &amp; Emily</h1>
     <p>June 13th, 2015</p>
+    <p> days to go!</p>
 </div>
 <!-- /headerwrap --> 
 
@@ -113,14 +114,14 @@
 </div>
 <!-- container --> 
 
-<!-- ==== REGISTRY ==== -->
-<div id="registry" name="registry">
+<!-- ==== GIFTS ==== -->
+<div id="gifts" name="gifts">
   <div class="container">
     <div class="row">
-      <h2 class="centered">REGISTRY</h2>
+      <h2 class="centered">GIFTS</h2>
       <hr>
       <div class="col-lg-8 col-lg-offset-2 centered">
-        <p class="large">For the gifts.</p>
+        <p class="large">We have all the houseware we need. If you were planning to give us a gift to help us begin our life together, please consider a donation to our honeymoon fund.</p>
       </div>
     </div>
     <!-- /row --> 
