--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
   <header class="clearfix"> 
     <img class="center-block img-responsive" id="sunflower" src="assets/img/sunflower.png">
     <h1>Nathan &amp; Emily</h1>
-    <p>June 13th, 2015</p>
-    <p> days to go!</p>
+    <p><span>June 13th, 2015</span><span id="countdown"></span></p>
 </div>
 <!-- /headerwrap --> 
 
@@ -164,5 +163,6 @@
 <script type="text/javascript" src="assets/js/jquery.easing.1.3.js"></script> 
 <script type="text/javascript" src="assets/js/smoothscroll.js"></script> 
 <script type="text/javascript" src="assets/js/jquery-func.js"></script>
+<script type="text/javascript" src="assets/js/date.js"></script>
 </body>
 </html>
