Changed headerwrap selector to make smoothscroll and bootstrap play well together.

--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
           <li><a href="#home" class="smoothScroll">Home</a></li>
-          <li> <a href="#location" class="smoothScroll"> Location</a></li>
-          <li> <a href="#schedule" class="smoothScroll"> Schedule</a></li>
-          <li> <a href="#gifts" class="smoothScroll"> Gifts</a></li>
-          <li> <a href="#photos" class="smoothScroll"> Photos</a></li>
+          <li><a href="#location" class="smoothScroll">Location</a></li>
+          <li><a href="#schedule" class="smoothScroll">Schedule</a></li>
+          <li><a href="#gifts" class="smoothScroll">Gifts</a></li>
+          <li><a href="#photos" class="smoothScroll">Photos</a></li>
         </ul>
       </div>
       <!--/.nav-collapse --> 
@@ -52,7 +52,7 @@
 </div>
 
 <!-- ==== HEADERWRAP ==== -->
-<div id="headerwrap" name="home">
+<div id="home" class="headerwrap" name="home">
   <header class="clearfix"> 
     <img class="center-block img-responsive" id="sunflower" src="assets/img/sunflower.png">
     <h1>Nathan &amp; Emily</h1>
