Added printable details section.

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
           <li><a href="#schedule" class="smoothScroll">Schedule</a></li>
           <li><a href="#gifts" class="smoothScroll">Gifts</a></li>
           <li><a href="#photos" class="smoothScroll">Photos</a></li>
+          <li><a href="#print" class="smoothScroll">Print</a></li>
         </ul>
       </div>
       <!--/.nav-collapse --> 
@@ -137,6 +138,21 @@
       </div>
       <div class="col-md-6">
         <p class="large">On the day of the wedding, feel free to hashtag any photos you share on Facebook, Instagram, Twitter, etc with #paulsen2015. You can also share photos directly with Nathan and Emily using the app Wed Pics (<a href="https://play.google.com/store/apps/details?id=com.dejami.WedPics">Android</a>, <a href="https://itunes.apple.com/us/app/wedpics-wedding-photo-app/id549402355">iOS</a>) , with ID still-need-an-id.</p>
+      </div>
+    </div>
+    <!-- /row --> 
+  </div>
+</div>
+<!-- /container --> 
+
+<!-- ==== PRINT ==== -->
+<div id="print" name="print">
+  <div class="container">
+    <div class="row">
+      <h2 class="centered">PRINTABLE DETAILS</h2>
+      <hr>
+      <div class="col-lg-8 col-lg-offset-2 centered">
+        <p class="large">You can <a href="details.pdf">print this PDF</a> with venue details, the schedule, and directions from major highways to take with you when you come to celebrate with us.</p>
       </div>
     </div>
     <!-- /row --> 
