--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <img class="img-responsive" src="assets/img/cottonwood.jpg" align="">
       </div>
       <div class="col-md-6">
-        <h3>Cottonwood Barn</h3>
+        <h3><a href="http://cottonwoodbarn.blogspot.com">Cottonwood Barn</a></h3>
         <h4>206 E. Odense St, Kimballton, Iowa</h4>
         <div id="map-outer">
           <div id="map-inner">
