--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       <h2 class="centered">GIFTS</h2>
       <hr>
       <div class="col-lg-8 col-lg-offset-2 centered">
-        <p class="large">We have all the houseware we need. If you were planning to give us a gift to help us begin our life together, please consider a donation to our honeymoon fund.</p>
+        <p class="large">We are blessed to have all the housewares we need. If you were planning to give us a gift to help us begin our life together, please consider a donation to our honeymoon fund.</p>
       </div>
     </div>
     <!-- /row --> 
