--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <link href="assets/css/custom-fonts.css" rel="stylesheet">
 <link href="assets/css/font-awesome.min.css" rel="stylesheet">
 <link href="assets/css/animate-custom.css" rel="stylesheet">
+<link rel="shortcut icon" sizes="64x64" href="assets/img/favicon.ico">
 <script src="assets/js/jquery.min.js"></script>
 <script type="text/javascript" src="assets/js/modernizr.custom.js"></script>
 
