Fleshed out schedule.

--- a/index.html
+++ b/index.html
@@ -92,20 +92,17 @@
     <div class="row">
       <h2 class="centered">SCHEDULE</h2>
       <hr>
-      <div class="col-lg-8 col-lg-offset-2">
-        <p class="large">Ceremony begins at 4 pm, with dinner and dancing afterward, all at the Cottonwood Barn.</p>
-      </div>
       <div class="col-lg-4 callout"> <i class="fa fa-heart-o fa-3x"></i>
         <h3>Ceremony</h3>
-        <p>To be held under the tree, weather permitting.</p>
+        <p>4 pm. To be held under the tree, weather permitting.</p>
       </div>
       <div class="col-lg-4 callout"> <i class="fa fa-cutlery fa-3x"></i>
         <h3>Dinner</h3>
-        <p>We have food for you.</p>
+        <p>While the wedding party takes photos, head inside and enjoy some food!</p>
       </div>
       <div class="col-lg-4 callout"> <i class="fa fa-music fa-3x"></i>
         <h3>Dancing</h3>
-        <p>Let's party.</p>
+        <p>Let loose and have some fun with the happy couple.</p>
       </div>
     </div>
     <!-- row --> 
