--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <div id="map-outer">
           <div id="map-inner">
             <a class="img-responsive" align="" href="https://www.google.com/maps/place/206+E.+Odense+St,+Kimballton,+Iowa/">
-              <img id="map-img" src="http://maps.googleapis.com/maps/api/staticmap?center=206+E.+Odense+St,+Kimballton,+Iowa&zoom=16&scale=false&size=600x250&maptype=roadmap&format=png&visual_refresh=true&markers=size:mid%7Ccolor:red%7Clabel:A%7C206+E.+Odense+St,+Kimballton,+Iowa" alt="Google Map of Cottonwood Barn, 206 E. Odense St, Kimballton, Iowa">
+              <img id="map-img" src="assets/img/map.png" title="Map of Cottonwood Barn" alt="Map of Cottonwood Barn">
             </a>
           </div>
         </div>
