--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <h4>206 E. Odense St, Kimballton, Iowa</h4>
         <div id="map-outer">
           <div id="map-inner">
-            <a class="img-responsive" align="" href="https://www.google.com/maps/place/206+E.+Odense+St,+Kimballton,+Iowa/">
+            <a class="img-responsive" href="https://www.google.com/maps/place/Cottonwood+Barn/@41.6275055,-95.0738972,17z/data=!4m7!1m4!3m3!1s0x879332c715e7e20d:0x9bfbb726928cea16!2s206+Odense+St,+Kimballton,+IA+51543!3b1!3m1!1s0x0000000000000000:0xec39dbe8ef1ccb46">
               <img id="map-img" src="assets/img/map.png" title="Map of Cottonwood Barn" alt="Map of Cottonwood Barn">
             </a>
           </div>
