Fixed text justification and placement

--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
     <div class="row white">
       <h2 class="centered">LOCATION</h2>
       <hr>
+      <h3 class="centered"><a href="http://cottonwoodbarn.blogspot.com">Cottonwood Barn</a></h3>
+      <h4 class="centered">206 E. Odense St, Kimballton, Iowa</h4>
       <div class="col-md-6">
         <img class="img-responsive" src="assets/img/cottonwood.jpg" alt="Tree at the Cottonwood Barn" align="bottom">
       </div>
       <div class="col-md-6">
-        <h3><a href="http://cottonwoodbarn.blogspot.com">Cottonwood Barn</a></h3>
-        <h4>206 E. Odense St, Kimballton, Iowa</h4>
         <div id="map-outer">
           <div id="map-inner">
             <a class="img-responsive" href="https://www.google.com/maps/place/Cottonwood+Barn/@41.6275055,-95.0738972,17z/data=!4m7!1m4!3m3!1s0x879332c715e7e20d:0x9bfbb726928cea16!2s206+Odense+St,+Kimballton,+IA+51543!3b1!3m1!1s0x0000000000000000:0xec39dbe8ef1ccb46">
@@ -116,7 +116,7 @@
     <div class="row">
       <h2 class="centered">GIFTS</h2>
       <hr>
-      <div class="col-lg-8 col-lg-offset-2 centered">
+      <div class="col-lg-8 col-lg-offset-2 justified">
         <p class="large">We are blessed to have all the housewares we need. If you were planning to give us a gift to help us begin our life together, please consider a donation to our honeymoon fund.</p>
       </div>
     </div>
@@ -135,7 +135,7 @@
         <h2 class="centered">#paulsen2015</h2>
       </div>
       <div class="col-md-6">
-        <p class="large">On the day of the wedding, feel free to hashtag any photos you share on Facebook, Instagram, Twitter, etc with #paulsen2015. You can also share photos directly with Nathan and Emily using the app Wed Pics (<a href="https://play.google.com/store/apps/details?id=com.dejami.WedPics">Android</a>, <a href="https://itunes.apple.com/us/app/wedpics-wedding-photo-app/id549402355">iOS</a>) , with ID still-need-an-id.</p>
+        <p class="large justified">On the day of the wedding, feel free to hashtag any photos you share on Facebook, Instagram, Twitter, etc with #paulsen2015. You can also share photos directly with Nathan and Emily using the app Wed Pics (<a href="https://play.google.com/store/apps/details?id=com.dejami.WedPics">Android</a>, <a href="https://itunes.apple.com/us/app/wedpics-wedding-photo-app/id549402355">iOS</a>) , with ID still-need-an-id.</p>
       </div>
     </div>
     <!-- /row --> 
@@ -149,7 +149,7 @@
     <div class="row">
       <h2 class="centered">PRINTABLE DETAILS</h2>
       <hr>
-      <div class="col-lg-8 col-lg-offset-2 centered">
+      <div class="col-lg-8 col-lg-offset-2 justified">
         <p class="large">You can <a href="details.pdf">print this PDF</a> with venue details, the schedule, and directions from major highways to take with you when you come to celebrate with us.</p>
       </div>
     </div>
