Added weather contingency to schedule.

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       <hr>
       <div class="col-lg-4 callout"> <i class="fa fa-heart-o fa-3x"></i>
         <h3>Ceremony</h3>
-        <p>4 pm. To be held under the tree, weather permitting.</p>
+        <p>4 pm. To be held under the tree. In case of bad weather, the ceremony will be inside the barn.</p>
       </div>
       <div class="col-lg-4 callout"> <i class="fa fa-cutlery fa-3x"></i>
         <h3>Dinner</h3>
