Removed name tags from divs

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </div>
 
 <!-- ==== HEADERWRAP ==== -->
-<div id="home" class="headerwrap" name="home">
+<div id="home" class="headerwrap">
   <header class="clearfix"> 
     <img class="center-block img-responsive" id="sunflower" src="assets/img/sunflower.png">
     <h1>Nathan &amp; Emily</h1>
@@ -61,7 +61,7 @@
 <!-- /headerwrap --> 
 
 <!-- ==== LOCATION ==== -->
-<div id="location" name="location">
+<div id="location">
   <div class="container">
     <div class="row white">
       <h2 class="centered">LOCATION</h2>
@@ -87,7 +87,7 @@
 <!-- container --> 
 
 <!-- ==== SCHEDULE ==== -->
-<div id="schedule" name="schedule">
+<div id="schedule">
   <div class="container">
     <div class="row">
       <h2 class="centered">SCHEDULE</h2>
@@ -111,7 +111,7 @@
 <!-- container --> 
 
 <!-- ==== GIFTS ==== -->
-<div id="gifts" name="gifts">
+<div id="gifts">
   <div class="container">
     <div class="row">
       <h2 class="centered">GIFTS</h2>
@@ -126,7 +126,7 @@
 <!-- /container --> 
 
 <!-- ==== PHOTOS ==== -->
-<div id="photos" name="photos">
+<div id="photos">
   <div class="container">
     <div class="row">
       <h2 class="centered">PHOTOS</h2>
@@ -144,7 +144,7 @@
 <!-- /container --> 
 
 <!-- ==== PRINT ==== -->
-<div id="print" name="print">
+<div id="print">
   <div class="container">
     <div class="row">
       <h2 class="centered">PRINTABLE DETAILS</h2>
