--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <title>Nathan &amp; Emily</title>
 
 <!-- Bootstrap core CSS -->
-<link href="assets/css/bootstrap.css" rel="stylesheet">
+<link href="assets/css/bootstrap.css" rel="stylesheet" type="text/css">
 
 <!-- Custom CSS -->
-<link href="assets/css/main.css" rel="stylesheet">
-<link href="assets/css/custom-fonts.css" rel="stylesheet">
-<link href="assets/css/font-awesome.min.css" rel="stylesheet">
-<link href="assets/css/animate-custom.css" rel="stylesheet">
+<link href="assets/css/main.css" rel="stylesheet" type="text/css">
+<link href="assets/css/custom-fonts.css" rel="stylesheet" type="text/css">
+<link href="assets/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+<link href="assets/css/animate-custom.css" rel="stylesheet" type="text/css">
 <link rel="shortcut icon" sizes="64x64" href="assets/img/favicon.ico">
-<script src="assets/js/jquery.min.js"></script>
+<script src="assets/js/jquery.min.js" type="text/javascript"></script>
 <script type="text/javascript" src="assets/js/modernizr.custom.js"></script>
 
 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -53,10 +53,9 @@
 
 <!-- ==== HEADERWRAP ==== -->
 <div id="home" class="headerwrap">
-  <header class="clearfix"> 
-    <img class="center-block img-responsive" id="sunflower" src="assets/img/sunflower.png">
-    <h1>Nathan &amp; Emily</h1>
-    <p><span>June 13th, 2015</span><span id="countdown"></span></p>
+  <img class="center-block img-responsive" id="sunflower" src="assets/img/sunflower.png" alt="Sunflower.">
+  <h1>Nathan &amp; Emily</h1>
+  <p><span>June 13th, 2015</span><span id="countdown"></span></p>
 </div>
 <!-- /headerwrap --> 
 
