--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
           <li><a href="#home" class="smoothScroll">Home</a></li>
           <li><a href="#location" class="smoothScroll">Location</a></li>
           <li><a href="#schedule" class="smoothScroll">Schedule</a></li>
+          <li><a href="#hotels" class="smoothScroll">Hotels</a></li>
           <li><a href="#gifts" class="smoothScroll">Gifts</a></li>
           <li><a href="#photos" class="smoothScroll">Photos</a></li>
           <li><a href="#print" class="smoothScroll">Print</a></li>
@@ -108,6 +109,27 @@
   </div>
 </div>
 <!-- container --> 
+
+<!-- ==== HOTELS ==== -->
+<div id="hotels">
+  <div class="container">
+    <div class="row centered">
+      <h2 class="centered">HOTELS</h2>
+      <hr>
+      <p>We do not have reserved room blocks, but here are some options for you in Atlantic!</p>
+      <div class="col-md-6 callout">
+        <h3><a href="http://www.bouldersinnatlantic.com/">Boulder Inn and Suites</a></h3>
+        <img src="http://www.bouldersinnatlantic.com/images/logo.gif" alt="Boulder logo.">
+      </div>
+      <div class="col-md-6 callout">
+        <h3><a href="http://www.super8.com/hotels/iowa/atlantic/super-8-atlantic/hotel-overview">Super 8</a></h3>
+        <img src="http://www.brandsoftheworld.com/sites/default/files/styles/logo-thumbnail/public/0021/9080/brand.gif" alt="Super 8 logo.">
+      </div>
+    </div>
+    <!-- row -->
+  </div>
+</div>
+<!-- container -->
 
 <!-- ==== GIFTS ==== -->
 <div id="gifts">
