Changed photo app text to Snapable.

--- a/index.html
+++ b/index.html
@@ -156,7 +156,8 @@
         <h2 class="centered">#paulsen2015</h2>
       </div>
       <div class="col-md-6">
-        <p class="large justified">On the day of the wedding, feel free to hashtag any photos you share on Facebook, Instagram, Twitter, etc with #paulsen2015. You can also share photos directly with Nathan and Emily using the app Wed Pics (<a href="https://play.google.com/store/apps/details?id=com.dejami.WedPics">Android</a>, <a href="https://itunes.apple.com/us/app/wedpics-wedding-photo-app/id549402355">iOS</a>) , with ID still-need-an-id.</p>
+        <p class="large justified">Instead of having disposable cameras on your table at the reception, we're using the app Snapable (<a href="https://play.google.com/store/apps/details?id=ca.hashbrown.snapable">Android</a>, <a href="https://itunes.apple.com/us/app/snapable/id560253289">iOS</a>). Take photos with Snapable and share them to the wedding live stream for other guests to see during the reception, and for Nathan and Emily to revisit the day from your perspective! You can see and add to their album by searching for "paulsen" in the Snapable app, or visiting <a href="snapable.com/event/paulsen">https://snapable.com/event/paulsen</a>. (Hint: You don't have to enter your email address, and the event PIN is 7592.)</p>
+        <p class="large justified">Also, on the day of the wedding, feel free to hashtag any photos you share on Facebook, Instagram, Twitter, etc with #paulsen2015!</p>
       </div>
     </div>
     <!-- /row -->
