Added header entry for songs.

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
           <li><a href="#hotels" class="smoothScroll">Hotels</a></li>
           <li><a href="#gifts" class="smoothScroll">Gifts</a></li>
           <li><a href="#photos" class="smoothScroll">Photos</a></li>
+          <li><a href="#songs" class="smoothScroll">Songs</a></li>
           <li><a href="#print" class="smoothScroll">Print</a></li>
         </ul>
       </div>
