Cleaned up form using bootstrap.

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
       <h2 class="centered">GIFTS</h2>
       <hr>
       <div class="col-lg-8 col-lg-offset-2 justified">
-        <p class="large">We are blessed to have all the housewares we need. If you were planning to give us a gift to help us begin our life together, please consider a donation to our honeymoon fund.</p>
+        <p class="large">We are registered at Cappell's and Menard's. We are blessed to have all the housewares we need. If you were planning to give us a gift to help us begin our life together, please consider a donation to our honeymoon fund.</p>
       </div>
     </div>
     <!-- /row -->
@@ -170,59 +170,36 @@
 <!-- ==== SONGS ==== -->
 <div id="songs">
   <div class="container">
-    <div class="row">
+    <div class="row centered">
       <h2 class="centered">SONGS</h2>
       <hr>
       <div class="col-lg-8 col-lg-offset-2 centered">
         <p>We'll try and play any requested songs during the reception.</p>
-        <div id="formwrap">
-        <form action="https://docs.google.com/forms/d/1NhDWWTr3gpArjA4sRwEz_-CCynYjHYhm8IwbcgDyreQ/formResponse?embedded=true" method="POST" id="ss-form" target="_self" onsubmit="">
-          <ol role="list" class="ss-question-list" style="padding-left: 0">
-          <div class="ss-form-question errorbox-good" role="listitem">
-            <div dir="ltr" class="ss-item ss-item-required ss-text">
-              <div class="ss-form-entry">
-                <label class="ss-q-item-label" for="entry_2054688981">
-                  <div class="ss-q-title">
-                    The song
-                    <label for="itemView.getDomIdToLabel()" aria-label="(Required field)"></label>
-                    <span class="ss-required-asterisk" aria-hidden="true">*</span>
-                  </div>
-                  <div class="ss-q-help ss-secondary-text" dir="ltr"></div>
-                </label>
-                <input type="text" name="entry.2054688981" value="" class="ss-q-short required" id="entry_2054688981" dir="auto" aria-label="What's the song?  " aria-required="true" required="" title="">
-                <div class="error-message" id="8917110_errorMessage"></div>
-              </div>
+        <form action="https://docs.google.com/forms/d/1NhDWWTr3gpArjA4sRwEz_-CCynYjHYhm8IwbcgDyreQ/formResponse?embedded=true" method="POST" id="ss-form" target="_self" onsubmit="" class="form-horizontal col-sm-offset-2" role="form">
+          <div class="form-group">
+            <label class="col-sm-3 control-label" for="entry_2054688981">The song</label>
+            <div class="col-sm-5">
+              <input type="text" name="entry.2054688981" value="" class="valid form-control" id="entry_2054688981" dir="auto" aria-label="The song" aria-required="true" required="" title="">
             </div>
           </div>
-          <div class="ss-form-question errorbox-good" role="listitem">
-            <div dir="ltr" class="ss-item  ss-text">
-              <div class="ss-form-entry">
-                <label class="ss-q-item-label" for="entry_730976592">
-                  <div class="ss-q-title">Who's requesting it</div>
-                  <div class="ss-q-help ss-secondary-text" dir="ltr"></div>
-                </label>
-                <input type="text" name="entry.730976592" value="" class="ss-q-short valid" id="entry_730976592" dir="auto" aria-label="Who's requesting it?  " title="">
-                <div class="error-message" id="1858237599_errorMessage"></div>
-              </div>
+          <div class="form-group">
+            <label class="col-sm-3 control-label" for="entry_730976592">Who's requesting it</label>
+            <div class="col-sm-5">
+              <input type="text" name="entry.730976592" value="" class="valid form-control" id="entry_730976592" dir="auto" aria-label="Who's requesting it" title="">
             </div>
           </div>
-          <input type="hidden" name="draftResponse" value="[,,&quot;4812164949483719784&quot;]">
-          <input type="hidden" name="pageHistory" value="0">
-          <input type="hidden" name="fbzx" value="4812164949483719784">
-          <br>
-          <input type="submit" name="submit" value="Submit" id="ss-submit" class="jfk-button jfk-button-action ">
-        </ol>
-      </form>
+          <div class="form-group">
+            <br>
+            <div class="col-sm-offset-3 col-sm-2">
+              <input type="submit" name="submit" value="Submit" id="ss-submit" class="jfk-button jfk-button-action form-control">
+            </div>
+          </div>
+        </form>
       </div>
     </div>
-    <br>
+    <!-- /row -->
   </div>
 </div>
-</div>
-<script type="text/javascript" src="/static/forms/client/js/3464403325-formviewer_prd.js"></script>
-<script type="text/javascript">H5F.setup(document.getElementById('ss-form'));
-      _initFormViewer("[100,,[]\n]\n", true);</script>
-    <!-- /row -->
 <!-- /container -->
 
 <!-- ==== PRINT ==== -->
