--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
       <h2 class="centered">GIFTS</h2>
       <hr>
       <div class="col-lg-8 col-lg-offset-2 justified">
-        <p class="large">We are registered at Cappell's and Menard's. Check back soon for links to the online registries. We are blessed to have most of the housewares we need; if you would prefer, please consider a donation to our honeymoon fund.</p>
+        <p class="large">We are registered at Cappel's and Menards. Check back soon for links to the online registries. We are blessed to have most of the housewares we need; if you would prefer, please consider a donation to our honeymoon fund.</p>
       </div>
     </div>
     <!-- /row -->
