--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <li><a href="#location" class="smoothScroll">Location</a></li>
           <li><a href="#schedule" class="smoothScroll">Schedule</a></li>
           <li><a href="#hotels" class="smoothScroll">Hotels</a></li>
-          <li><a href="#gifts" class="smoothScroll">Gifts</a></li>
+          <li><a href="#registry" class="smoothScroll">Registry</a></li>
           <li><a href="#photos" class="smoothScroll">Photos</a></li>
           <li><a href="#songs" class="smoothScroll">Songs</a></li>
           <li><a href="#print" class="smoothScroll">Print</a></li>
@@ -132,11 +132,11 @@
 </div>
 <!-- container -->
 
-<!-- ==== GIFTS ==== -->
-<div id="gifts">
+<!-- ==== REGISTRY ==== -->
+<div id="registry">
   <div class="container">
     <div class="row">
-      <h2 class="centered">GIFTS</h2>
+      <h2 class="centered">REGISTRY</h2>
       <hr>
       <div class="col-lg-8 col-lg-offset-2 justified">
         <p class="large">We are registered at Cappel's and Menards. Check back soon for links to the online registries. We are blessed to have most of the housewares we need; if you would prefer, please consider a donation to our honeymoon fund.</p>
