Updated registry links.

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
       <h2 class="centered">REGISTRY</h2>
       <hr>
       <div class="col-lg-8 col-lg-offset-2 justified">
-        <p class="large">We are registered at Cappel's and Menards. Check back soon for links to the online registries. We are blessed to have most of the housewares we need; if you would prefer, please consider a donation to our honeymoon fund.</p>
+        <p class="large">We are registered at Cappel's and <a href="http://www.menards.com/main/registrydetail.html?registryId=56201952&lastName=Ullerich">Menards</a> (check back soon for an expanded list at the Mendards link). For Cappel's, check the physical registry at the Atlantic store. We are blessed to have most of the housewares we need; if you would prefer, please consider a donation to our honeymoon fund.</p>
       </div>
     </div>
     <!-- /row -->
