--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
             </div>
           </div>
           <div class="form-group">
-            <label class="col-sm-3 control-label" for="entry_730976592">Who's requesting it</label>
+            <label class="col-sm-3 control-label" for="entry_730976592">Requester's name</label>
             <div class="col-sm-5">
               <input type="text" name="entry.730976592" value="" class="valid form-control" id="entry_730976592" dir="auto" aria-label="Who's requesting it" title="">
             </div>
