Added two new hotels.

--- a/index.html
+++ b/index.html
@@ -117,14 +117,24 @@
     <div class="row centered">
       <h2 class="centered">HOTELS</h2>
       <hr>
-      <p>We do not have reserved room blocks, but here are some options for you in Atlantic!</p>
-      <div class="col-md-6 callout">
-        <h3><a href="http://www.bouldersinnatlantic.com/">Boulder Inn and Suites</a></h3>
-        <img src="http://www.bouldersinnatlantic.com/images/logo.gif" alt="Boulder logo.">
+      <p>We do not have reserved room blocks, but here are some options for you nearby!</p>
+      <div class="col-md-3 callout">
+        <h3><a href="https://www.motel6.com/content/g6/motel6/motel6-com/en/motels.ia.avoca.4168.html">Motel 6, Avoca</a></h3>
+        <img src="http://image.hospitalityonline.com/e/stock/motel_6.png" alt="Super 8 logo.">
       </div>
-      <div class="col-md-6 callout">
-        <h3><a href="http://www.super8.com/hotels/iowa/atlantic/super-8-atlantic/hotel-overview">Super 8</a></h3>
+      <div class="col-md-3 callout">
+        <h3><a href="http://www.settleinn.com/hotels/harlan">Settle Inn, Harlan</a></h3>
+        <img src="https://www.aafd.org/images/aafd-branded-logos/settle-inn.jpg" alt="Super 8 logo.">
+      </div>
+      <div class="col-md-3 callout">
+        <h3><a href="http://www.bouldersinnatlantic.com/">Boulder Inn, Atlantic</a></h3>
+        <img src="http://www.bouldersinnatlantic.com/images/logo.gif" alt="Boulder logo.">
+        <h3>no vacancy</h3>
+      </div>
+      <div class="col-md-3 callout">
+        <h3><a href="http://www.super8.com/hotels/iowa/atlantic/super-8-atlantic/hotel-overview">Super 8, Atlantic</a></h3>
         <img src="http://www.brandsoftheworld.com/sites/default/files/styles/logo-thumbnail/public/0021/9080/brand.gif" alt="Super 8 logo.">
+        <h3>no vacancy</h3>
       </div>
     </div>
     <!-- row -->
